--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!--  A simple todo task using html css and JavaScript
+    The README.MD file contains all details about the project
+ -->
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List <img src="To-Do-Img/images/icon.png" alt=""></h2>
